force-app/main/default/objects/JBCXM__Alert__c/JBCXM__Alert__c.object-meta.xml
<CustomObject>
    <description>Alert Object is used to store all customer alerts posted.</description>
    <label>Alert</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>