force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <description>Select the customer against whom the Alert is issued. Master-Detail Relationship on Account Object.</description>
    <inlineHelpText>Select the customer against whom the Alert is issued.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>