force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__AssociatedObjectRecordValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectRecordValue__c</fullName>
    <inlineHelpText>Associated Object Value</inlineHelpText>
    <label>Associated Object Record Value</label>
    <length>160</length>
    <type>Text</type>
</CustomField>