force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Comment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Comment__c</fullName>
    <description>Enter commentary or background on the alert - max length allowed 4096 characters.</description>
    <inlineHelpText>Enter commentary or background on the alert - max length allowed 4096 characters.</inlineHelpText>
    <label>Comment</label>
    <length>32760</length>
    <type>LongTextArea</type>
</CustomField>