force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Date__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Date__c</fullName>
    <description>Select the date on which Alert is issued.</description>
    <inlineHelpText>Select the date on which Alert is issued.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>