force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__LinkedToNPS__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LinkedToNPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Alert is associated to the NPS response from the customer that the alert is linked to.</description>
    <inlineHelpText>Checked if the Alert is associated to the NPS response from the customer that the alert is linked to.</inlineHelpText>
    <label>Linked to NPS</label>
    <type>Checkbox</type>
</CustomField>