force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__MRR__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MRR__c</fullName>
    <description>MRR Value is auto calculated based on the Alert value entered in the ASV field. MRR = ASV/12</description>
    <inlineHelpText>MRR Value is auto calculated based on the Alert value entered in the ASV field.</inlineHelpText>
    <label>Alert MRR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>