force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__NextStepComment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NextStepComment__c</fullName>
    <description>Enter details of the remedial actions proposed or under taken to address the Alert - max allowed length 4096 characters.</description>
    <inlineHelpText>Enter details of the remedial actions proposed or under taken to address the Alert - max allowed length 4096 characters.</inlineHelpText>
    <label>Next Step Comment</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>