force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__NextStepDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NextStepDate__c</fullName>
    <description>Enter the date on which the last remedial action was taken or proposed to be taken.</description>
    <inlineHelpText>Enter the date on which the last remedial action was taken or proposed to be taken.</inlineHelpText>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>