force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Reason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the reason that resulted in this Alert. The list of reasons is customizable for your organization.</description>
    <inlineHelpText>Select the reason that resulted in this Alert. The list of reasons is customizable for your organization.</inlineHelpText>
    <label>Reason</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Alerts (Reason)</relationshipLabel>
    <relationshipName>AlertsPicklistReason</relationshipName>
    <type>Lookup</type>
</CustomField>