force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Severity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Severity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alert Severity (or &quot;Alert Probability&quot;) indicates the probability of occurence of the Alert event. The list is customizable, if needed, by adding records to picklist object.</description>
    <inlineHelpText>Alert Severity (or &quot;Alert Probability&quot;) indicates the probability of occurence of the Alert event.</inlineHelpText>
    <label>Severity</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>AlertsPicklistSeverity</relationshipName>
    <type>Lookup</type>
</CustomField>