force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Status__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alert Status is defaulted to &quot;Active&quot;. When no further actions are required on the Alert, change the status to &quot;Closed&quot;.</description>
    <inlineHelpText>Alert Status is defaulted to &quot;Active&quot;. When no further actions are required on the Alert, change the status to &quot;Closed&quot;.</inlineHelpText>
    <label>Status</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Alerts (Status)</relationshipLabel>
    <relationshipName>AlertsPicklistStatus</relationshipName>
    <type>Lookup</type>
</CustomField>