force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the type of Alert being issued. 3 alert types are supported - Customer Concern, Downsell and Churn.</description>
    <inlineHelpText>Select the type of Alert being issued. 3 alert types are supported - Customer Concern, Downsell and Churn.</inlineHelpText>
    <label>Type</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Alerts (Type)</relationshipLabel>
    <relationshipName>AlertsPicklistType</relationshipName>
    <type>Lookup</type>
</CustomField>