force-app/main/default/objects/JBCXM__Alert__c/fields/JBCXM__UniqueID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UniqueID__c</fullName>
    <description>This field Uniquely Identifies an alert can be used as an ExternalID</description>
    <displayFormat>AL-{0}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>This field Uniquely Identifies an alert can be used as an ExternalID</inlineHelpText>
    <label>Unique ID</label>
    <type>AutoNumber</type>
</CustomField>