force-app/main/default/objects/JBCXM__Alert__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__Account__c</columns>
    <columns>JBCXM__AssociatedObjectDisplayValue__c</columns>
    <columns>JBCXM__AssociatedObjectRecordID__c</columns>
    <columns>JBCXM__AssociatedObjectRecordValue__c</columns>
    <columns>JBCXM__ASV__c</columns>
    <columns>JBCXM__Comment__c</columns>
    <columns>JBCXM__Date__c</columns>
    <columns>JBCXM__LinkedToNPS__c</columns>
    <columns>JBCXM__LinkedToUsage__c</columns>
    <columns>JBCXM__Reason__c</columns>
    <columns>JBCXM__Severity__c</columns>
    <columns>JBCXM__Status__c</columns>
    <columns>JBCXM__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>